syntax = "proto3";

package protos.location.v1;

import "google/protobuf/timestamp.proto";

option go_package = "protos/location/v1";

service LocationService {
  rpc UpdateLocation(UpdateLocationRequest) returns (UpdateLocationResponse) {}
  rpc QueryLocation(QueryLocationRequest) returns (QueryLocationResponse) {}
  rpc UpdateLocationStreaming(stream UpdateLocationRequest) returns (UpdateLocationResponse) {}
  rpc QueryLocationStreaming(QueryLocationRequest) returns (stream QueryLocationResponse) {}
}

message UpdateLocationRequest {
  string worker_id = 1;
  double longitude = 2;
  double latitude = 3;
}

message UpdateLocationResponse {
  string worker_id = 1;
}

message QueryLocationRequest {
  string worker_id = 1;
}

message QueryLocationResponse {
  string worker_id = 1;
  double longitude = 2;
  double latitude = 3;
  double distance = 4;
  google.protobuf.Timestamp last_seen = 5;
}
